@@ -1,5 +1,8 @@
 2005-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* site/install/older-versions.html: New file.  Retrieve from
+	google cache.
+
 	* site/about/faq.html (href): Fix link to big tutorial.
 
 	* site: More /download link fixes.
